chore: add ability for the `ipsw symbolicate` symbol server to tell you it doesn't have the required IPSW scanned yet
